# jamboree

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  audit.toml  process-compose.yaml
.claude/: settings.json
.jam/: pr-body.md  pr-title.txt
.tempyr/: config.toml  managed.toml  schema.toml
crates/jam-cli/: Cargo.toml
crates/jam-cli/src/: main.rs
crates/jam-cli/tests/: trace_continuity.rs
crates/jam-clock-watcher/: Cargo.toml
crates/jam-clock-watcher/src/: main.rs
crates/jam-events/: Cargo.toml  events.toml
crates/jam-events/src/: lib.rs
crates/jam-harness-watcher/: Cargo.toml
crates/jam-harness-watcher/src/: main.rs
crates/jam-journal/: Cargo.toml
crates/jam-journal-reconciler/: Cargo.toml
crates/jam-journal-reconciler/src/: main.rs
crates/jam-journal/src/: lib.rs  redact.rs  writer.rs
crates/jam-nats/: Cargo.toml
crates/jam-nats-bridge/: Cargo.toml
crates/jam-nats-bridge/src/: main.rs
crates/jam-nats/src/: client.rs  headers.rs  lib.rs  routing_manifest.rs  setup.rs
crates/jam-ntfy-bridge/: Cargo.toml
crates/jam-ntfy-bridge/src/: main.rs
crates/jam-patch-agent/: Cargo.toml
crates/jam-patch-agent/src/: main.rs  patch_ops.rs
crates/jam-pr-poller/: Cargo.toml
crates/jam-pr-poller/src/: main.rs
crates/jam-secrets/: Cargo.toml
crates/jam-secrets/src/: lib.rs
crates/jam-setup/: Cargo.toml
crates/jam-setup/src/: checks.rs  lib.rs
crates/jam-skill-suspicion/: Cargo.toml
crates/jam-skill-suspicion/src/: main.rs
crates/jam-stall-detector/: Cargo.toml
crates/jam-stall-detector/src/: main.rs
crates/jam-svc-evolve/: Cargo.toml
crates/jam-svc-evolve/src/: main.rs
crates/jam-svc-knowledge/: Cargo.toml
crates/jam-svc-knowledge/src/: main.rs
crates/jam-svc-message/: Cargo.toml
crates/jam-svc-message/src/: main.rs
crates/jam-svc-observe/: Cargo.toml
crates/jam-svc-observe/src/: main.rs
crates/jam-svc-repo/: Cargo.toml
crates/jam-svc-repo/src/: main.rs
crates/jam-svc-research/: Cargo.toml
crates/jam-svc-research/src/: main.rs
crates/jam-svc-search/: Cargo.toml
crates/jam-svc-search/src/: main.rs
crates/jam-svc-session/: Cargo.toml
crates/jam-svc-session/src/: main.rs
crates/jam-svc-supervise/: Cargo.toml
crates/jam-svc-supervise/src/: main.rs
crates/jam-task-core/: Cargo.toml
crates/jam-task-core/src/: aggregate.rs  error.rs  event.rs  lib.rs  status.rs
crates/jam-task-lifecycle/: Cargo.toml
crates/jam-task-lifecycle/src/: adapter.rs  main.rs  post_picker.rs
crates/jam-task-store/: Cargo.toml
crates/jam-task-store/src/: lib.rs  query.rs  schema.rs  store.rs
crates/jam-tools-core/: Cargo.toml
crates/jam-tools-core/schemas/evolve/: request-skill-evolution.request.json
crates/jam-tools-core/schemas/message/: enqueue-message.request.json  full-stop.request.json  interrupt-with-message.request.json
crates/jam-tools-core/schemas/observe/: branch-staleness.request.json  classify-review-artifacts.request.json  compute-readiness.request.json  list-blockers.request.json  list-review-artifacts.request.json  query-quota.request.json  refresh-world-snapshot.request.json  world-snapshot-delta.request.json  world-snapshot-delta.response.json  world-snapshot.request.json  world-snapshot.response.json
crates/jam-tools-core/schemas/repo/: mark-review-artifact-handled.request.json  open-pr.request.json  pr-status.request.json  prepare-merge.request.json  read-pr-comments.request.json  reply-to-comment.request.json  request-human-merge.request.json  request-review.request.json
crates/jam-tools-core/schemas/research/: request-research.request.json
crates/jam-tools-core/schemas/search/: web-crawl.request.json  web-crawl.response.json  web-extract.request.json  web-extract.response.json  web-search.request.json
crates/jam-tools-core/schemas/session/: archive-session.request.json  full-stop.request.json  inspect-picker.request.json  list-active.request.json  purge-session.request.json  spawn-picker.request.json
crates/jam-tools-core/schemas/supervise/: notify-human.request.json  pause-dispatch.request.json  resume-dispatch.request.json
crates/jam-tools-core/schemas/worktree/: create.request.json  create.response.json  find-conflicts.request.json  find-conflicts.response.json  worktree-diff.request.json  worktree-diff.response.json
crates/jam-tools-core/src/: contracts.rs  deploy_targets.rs  hashing.rs  lib.rs  paths.rs  pr_title.rs  workspace.rs
docs/: layout.md  onboard-blueberry.md  proposal-v5.md  security-setup.md
evolution/: README.md  hermes-agent-self-evolution.UPSTREAM  jamboree_evolve_skill.py
maestro/: pyproject.toml
maestro/src/jam_maestro/: __init__.py  __main__.py  backend.py  candidates.py  dispatch.py  hard_abort.py  input_budget.py  journal_reader.py  mcp_router.py  models.py  nats_rpc.py  paths.py  project_config.py  record_learning.py  review_safety.py  routing_manifest.py  session.py  session_store.py  skills.py  tempyr_journal.py  tempyr_journal_query.py  tempyr_query.py  tool_registry.py  trace.py  untrusted.py  wake.py
maestro/src/jam_maestro/tools/: __init__.py  evolve.py  message.py  observe.py  repo.py  research.py  search.py  session.py  supervise.py  worktree.py
maestro/tests/: __init__.py
maestro/tests/unit/: __init__.py  test_backend.py  test_candidates.py  test_dispatch.py  test_hard_abort.py  test_input_budget.py  test_journal_reader.py  test_mcp_router.py  test_paths.py  test_project_config.py  test_prompt_injection.py  test_record_learning.py  test_routing_manifest.py  test_session.py  test_session_store.py  test_skills.py  test_tempyr_journal.py  test_tempyr_journal_query.py  test_tempyr_query.py  test_tool_registry.py  test_untrusted.py  test_wake.py
scripts/: audit-completion-state.sh  audit-external-acceptance.sh  authorize-github-user-token.sh  auto-deploy.sh  bench-docker-sandbox-compile.sh  bootstrap-users.sh  cleanup-task-worktrees.sh  cli-tools-update.sh  github-app-git-credential.py  init-maestro-keyring.sh  install-auto-deploy.sh  install-cli-tools.sh  install-jam-service.sh  jam-install-bin  (+15 more)
(+478 files in other folders)
