[workspace]
resolver = "2"
members = [
    "crates/jam-trace",
    "crates/jam-secrets",
    "crates/jam-events",
    "crates/jam-journal",
    "crates/jam-nats",
    "crates/jam-setup",
    "crates/jam-cli",
    "crates/jam-nats-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Caleb Leak <caleb.leak@gmail.com>"]
repository = "https://github.com/cleak/jamboree"
rust-version = "1.94"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allowed exceptions to pedantic — these create noise for our domain.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
# doc_markdown flags every multi-cap product name (DeepSeek, NATS, GitHub, etc.).
# Backticking proper nouns in prose harms readability; we backtick code only.
doc_markdown = "allow"

[workspace.dependencies]
# Shared deps pinned at workspace level so all crates see consistent versions.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = { version = "1.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
secrecy = { version = "0.10", features = ["serde"] }
thiserror = "2.0"
toml = "0.8"
regex = "1.11"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "signal", "time"] }
async-nats = "0.39"
bytes = "1.8"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
