[workspace]
resolver = "2"
members = [
    "crates/jam-trace",
    "crates/jam-secrets",
    "crates/jam-events",
    "crates/jam-clock-watcher",
    "crates/jam-harness-watcher",
    "crates/jam-journal",
    "crates/jam-journal-reconciler",
    "crates/jam-skill-suspicion",
    "crates/jam-stall-detector",
    "crates/jam-nats",
    "crates/jam-setup",
    "crates/jam-cli",
    "crates/jam-tools-core",
    "crates/jam-ntfy-bridge",
    "crates/jam-nats-bridge",
    "crates/jam-pr-poller",
    "crates/jam-tempyr-pr-reconciler",
    "crates/jam-tempyr-write-reconciler",
    "crates/jam-untrusted",
    "crates/jam-trunk-fetcher",
    "crates/jam-task-lifecycle",
    "crates/jam-patch-agent",
    "crates/jam-svc-observe",
    "crates/jam-svc-knowledge",
    "crates/jam-svc-evolve",
    "crates/jam-svc-message",
    "crates/jam-svc-repo",
    "crates/jam-svc-research",
    "crates/jam-svc-search",
    "crates/jam-svc-session",
    "crates/jam-svc-supervise",
    "crates/jam-svc-worktree",
    "crates/jam-ui-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Caleb Leak <caleb.leak@gmail.com>"]
repository = "https://github.com/cleak/jamboree"
rust-version = "1.94"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# `correctness` and `suspicious` are strict-deny — they catch real bugs and
# almost-always-wrong patterns. `style`, `complexity`, `perf`, and `pedantic`
# advise but don't fail builds. With fully-agentic merges, blocking on
# style/complexity turns every CI run into a chase after pedantic suggestions
# the picker can't always satisfy on the first revision (and CodeRabbit
# already comments on the substantive ones).
all = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -2 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
# Allowed exceptions — these create noise for our domain.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
# doc_markdown flags every multi-cap product name (DeepSeek, NATS, GitHub, etc.).
# Backticking proper nouns in prose harms readability; we backtick code only.
doc_markdown = "allow"

[workspace.dependencies]
# Shared deps pinned at workspace level so all crates see consistent versions.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ulid = { version = "1.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
secrecy = { version = "0.10", features = ["serde"] }
thiserror = "2.0"
toml = "0.8"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.41", features = ["macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
async-nats = "0.39"
bytes = "1.8"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
time = "0.3"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
hex = "0.4"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
octocrab = "0.50"
rand = "0.8"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }

[profile.release]
lto = "thin"
codegen-units = 1
