[package]
name = "jam-cli"
description = "The user-facing `jam` CLI binary."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "jam"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
jam-events = { path = "../jam-events" }
jam-nats = { path = "../jam-nats" }
jam-setup = { path = "../jam-setup" }
jam-tools-core = { path = "../jam-tools-core" }
jam-trace = { path = "../jam-trace" }
jam-ui-server = { path = "../jam-ui-server" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
