[package]
name = "jam-clock-watcher"
description = "NTP synchronization watcher emitting clock.unsynced (§4.4.6, §21.3)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "jam-clock-watcher"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
jam-events = { path = "../jam-events" }
jam-nats = { path = "../jam-nats" }
jam-trace = { path = "../jam-trace" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
