[package]
name = "jam-events"
description = "Event manifest and shared envelope for the Jamboree NATS bus (§4.4.2-4.4.3)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
jam-trace = { path = "../jam-trace" }

[lints]
workspace = true
