[package]
name = "jam-journal-reconciler"
description = "Replays orchestrator journal events into the SQLite/FTS5 session store (§4.4.2)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "jam-journal-reconciler"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
jam-nats = { path = "../jam-nats" }
jam-tools-core = { path = "../jam-tools-core" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
