[package]
name = "jam-journal"
description = "Append-only JSONL journal writer with rotation + secret redaction (§4.4.2)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
jam-events = { path = "../jam-events" }
jam-trace = { path = "../jam-trace" }

[dev-dependencies]
tempfile = "3.10"

[lints]
workspace = true
