[package]
name = "jam-nats-bridge"
description = "Subscribes to journal.* and writes JSONL via jam-journal."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "jam-nats-bridge"
path = "src/main.rs"

[dependencies]
async-nats = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jam-journal = { path = "../jam-journal" }
jam-nats = { path = "../jam-nats" }
jam-tools-core = { path = "../jam-tools-core" }

[dev-dependencies]
tempfile = "3.10"

[lints]
workspace = true
