[package]
name = "jam-nats"
description = "NATS JetStream client wrapper enforcing trace propagation (§4.4.1, §23.3.1)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-nats = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
jam-trace = { path = "../jam-trace" }

[lints]
workspace = true
