[package]
name = "jam-ntfy-bridge"
description = "Bridge notify.human NATS messages to ntfy push notifications."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "jam-ntfy-bridge"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
jam-nats = { path = "../jam-nats" }
jam-secrets = { path = "../jam-secrets" }
jam-tools-core = { path = "../jam-tools-core" }
jam-trace = { path = "../jam-trace" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
