[package]
name = "jam-patch-agent"
description = "Hot-patch supervisor with deterministic-then-LLM recovery (§20.5)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "jam-patch-agent"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
jam-events = { path = "../jam-events" }
jam-nats = { path = "../jam-nats" }
jam-tools-core = { path = "../jam-tools-core" }
jam-trace = { path = "../jam-trace" }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.14"
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
