[package]
name = "jam-secrets"
description = "Secrets backends (pass + file) and SecretString discipline (§11.3)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
secrecy = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3.10"

[lints]
workspace = true
