[package]
name = "jam-setup"
description = "Environment preflight checks for jam setup / jam doctor (§11.4)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.10"

[lints]
workspace = true
