[package]
name = "jam-setup"
description = "Environment preflight checks for jam setup / jam doctor (§11.4)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
jam-tools-core = { path = "../jam-tools-core" }
jsonwebtoken = { workspace = true }
octocrab = { workspace = true }
secrecy = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3.10"

[lints]
workspace = true
