[package]
name = "jam-skill-suspicion"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
jam-events = { path = "../jam-events" }
jam-nats = { path = "../jam-nats" }
jam-trace = { path = "../jam-trace" }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
