[package]
name = "jam-stall-detector"
description = "Detects stalled Picker sessions and emits picker.stalled (§4.4.6)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "jam-stall-detector"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
jam-events = { path = "../jam-events" }
jam-nats = { path = "../jam-nats" }
jam-trace = { path = "../jam-trace" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
