[package]
name = "jam-svc-evolve"
description = "Skill evolution coordinator wrapping the vendored Hermes self-evolution subprocess."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "jam-svc-evolve"
path = "src/main.rs"

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
jam-nats = { path = "../jam-nats" }
jam-trace = { path = "../jam-trace" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
