[package]
name = "jam-svc-repo"
description = "Repo / PR tool service exposing open-pr and pr-status (§5.4)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "jam-svc-repo"
path = "src/main.rs"

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
jam-events = { path = "../jam-events" }
jam-nats = { path = "../jam-nats" }
jam-secrets = { path = "../jam-secrets" }
jam-trace = { path = "../jam-trace" }
jam-untrusted = { path = "../jam-untrusted" }
jsonwebtoken = { workspace = true }
octocrab = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
tempfile = "3.14"

[lints]
workspace = true
