[package]
name = "jam-svc-research"
description = "Tiered deep research tool service."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "jam-svc-research"
path = "src/main.rs"

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
jam-nats = { path = "../jam-nats" }
jam-secrets = { path = "../jam-secrets" }
jam-trace = { path = "../jam-trace" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
tempfile = "3.14"

[lints]
workspace = true
