[package]
name = "jam-svc-search"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
jam-events = { path = "../jam-events" }
jam-nats = { path = "../jam-nats" }
jam-secrets = { path = "../jam-secrets" }
jam-trace = { path = "../jam-trace" }
reqwest.workspace = true
scraper = "0.26.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
