[package]
name = "jam-svc-session"
description = "Session tool service implementing Codex CLI Picker spawn MVP (§24.3)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "jam-svc-session"
path = "src/main.rs"

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
jam-events = { path = "../jam-events" }
jam-nats = { path = "../jam-nats" }
jam-secrets = { path = "../jam-secrets" }
jam-tools-core = { path = "../jam-tools-core" }
jam-trace = { path = "../jam-trace" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
