[package]
name = "jam-tools-core"
description = "JSON Schema contracts for Jamboree tool service I/O (§11.2.6)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
jam-untrusted = { path = "../jam-untrusted" }

[lints]
workspace = true
